--- a/section04/public/css/main.css
+++ b/section04/public/css/main.css
@@ -12,7 +12,7 @@ body {
 
 main {
   padding: 1rem;
-  margin: auto;
+  margin: auto 100px;
 }
 
 form {
@@ -31,11 +31,56 @@ form {
   height: 100%;
 }
 
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: black;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #222222;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+
+
+
 .main-header {
   width: 100%;
   height: 3.5rem;
-  background-color: #00695c;
-  padding: 0 1.5rem;
+  background-color: black;
+  padding: 0 ;
   display: flex;
   align-items: center;
 }
@@ -75,7 +120,7 @@ form {
 .main-header__item a.active,
 .main-header__item button:hover,
 .main-header__item button:active {
-  color: #ffeb3b;
+  color: red;
 }
 
 .mobile-nav {
