--- a/section04/views/includes/navigation.ejs
+++ b/section04/views/includes/navigation.ejs
@@ -1,30 +1,46 @@
 <div class="backdrop"></div>
+
 <header class="main-header">
     <button id="side-menu-toggle">Menu</button>
     <nav class="main-header__nav">
-        <ul class="main-header__item-list">
-            <li class="main-header__item">
-                <a class="<%= path === '/' ? 'active' : '' %>" href="/">Shop</a>
+        <ul class="main-header__item-list">  <div class="dropdown">
+            <li class="dropbtn">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                class="feather feather-menu">
+                <line x1="3" y1="12" x2="21" y2="12"></line>
+                <line x1="3" y1="6" x2="21" y2="6"></line>
+                <line x1="3" y1="18" x2="21" y2="18"></line>
+              </svg>
             </li>
-            <li class="main-header__item">
-                <a class="<%= path === '/products' ? 'active' : '' %>" href="/products">Products</a>
-            </li>
-            <% if (isAuthenticated) { %>
-                <li class="main-header__item">
-                    <a class="<%= path === '/cart' ? 'active' : '' %>" href="/cart">Cart</a>
-                </li>
-                <li class="main-header__item">
-                    <a class="<%= path === '/orders' ? 'active' : '' %>" href="/orders">Orders</a>
-                </li>
-                <li class="main-header__item">
-                    <a class="<%= path === '/admin/add-product' ? 'active' : '' %>" href="/admin/add-product">Add Product
-                    </a>
-                </li>
-                <li class="main-header__item">
-                    <a class="<%= path === '/admin/products' ? 'active' : '' %>" href="/admin/products">Admin Products
-                    </a>
-                </li>
-            <% } %>
+            <div class="dropdown-content">
+              <li class="main-header__item">
+                  <a class="<%= path === '/' ? 'active' : '' %>" href="/">Home</a>
+              </li>
+              <li class="main-header__item">
+                  <a class="<%= path === '/products' ? 'active' : '' %>" href="/products">Products</a>
+              </li>
+              <% if (isAuthenticated) { %>
+                  <li class="main-header__item">
+                      <a class="<%= path === '/cart' ? 'active' : '' %>" href="/cart">Cart</a>
+                  </li>
+                  <li class="main-header__item">
+                      <a class="<%= path === '/orders' ? 'active' : '' %>" href="/orders">Orders</a>
+                  </li>
+                  <li class="main-header__item">
+                      <a class="<%= path === '/admin/add-product' ? 'active' : '' %>" href="/admin/add-product">Add Product
+                      </a>
+                  </li>
+                  <li class="main-header__item">
+                      <a class="<%= path === '/admin/products' ? 'active' : '' %>" href="/admin/products">Admin Products
+                      </a>
+                  </li>
+              <% } %>
+            </div>
+          </div>
+
+
+
         </ul>
         <ul class="main-header__item-list">
             <% if (!isAuthenticated) { %>
@@ -35,6 +51,9 @@
                     <a class="<%= path === '/signup' ? 'active' : '' %>" href="/signup">Signup</a>
                 </li>
             <% } else { %>
+              <li class="main-header__item">
+                  <a class="<%= path === '/profile' ? 'active' : '' %>" href="/profile">Profile</a>
+              </li>
                 <li class="main-header__item">
                     <form action="/logout" method="post">
                       <input type="hidden" name="_csrf" value="<%= csrfToken %>">
@@ -49,7 +68,7 @@
 <nav class="mobile-nav">
     <ul class="mobile-nav__item-list">
         <li class="mobile-nav__item">
-            <a class="<%= path === '/' ? 'active' : '' %>" href="/">Shop</a>
+            <a class="<%= path === '/' ? 'active' : '' %>" href="/">Home</a>
         </li>
         <li class="mobile-nav__item">
             <a class="<%= path === '/products' ? 'active' : '' %>" href="/products">Products</a>
