Change hover color to pink

--- a/section04/public/css/main.css
+++ b/section04/public/css/main.css
@@ -120,7 +120,7 @@ form {
 .main-header__item a.active,
 .main-header__item button:hover,
 .main-header__item button:active {
-  color: red;
+  color: pink;
 }
 
 .mobile-nav {
